--- a/LDAP.csproj
+++ b/LDAP.csproj
@@ -2,10 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
+
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="2.0.0" />
 
     <PackageReference Include="Novell.Directory.Ldap.NETStandard" Version="2.3.8" />
 
